--- a/EmployeeApplication/src/main/resources/application.properties
+++ b/EmployeeApplication/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-
+# Using in-memory database H2 to take care of database management
+spring.h2.console.enabled=true
+spring.datasource.platform=h2
+spring.datasource.url=jdbc:h2:mem:employee-application
+# Use spring.datasource.url=jdbc:h2:~/employee-application for persistent memory. Username = sa for non-persistent mem.
+spring.jpa.hibernate.ddl-auto=update
