complete ThymeLeaf intro

--- a/EmployeeApplication/src/main/resources/application.properties
+++ b/EmployeeApplication/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.datasource.platform=h2
 spring.datasource.url=jdbc:h2:mem:employee-application
 # Use spring.datasource.url=jdbc:h2:~/employee-application for persistent memory. Username = sa for non-persistent mem.
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
